# gopro2gpx

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  GPMF_mp4reader.c  GPMF_mp4reader.h  README.md  cmake-linux  gopro2fit.c  gopro2gpx.c  goprofilenames.c  goprofilenames.h  gpmf.c  gpmf.h  gpx.c  gpx.h  launch.vs.json  list.c  list.h  main.c  mystring.c  mystring.h  platform.c  platform.h  shrink-wrap  utils.c  utils.h
